# strategy_agent

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
docs/: adk_2_migration_notes.md  adk_agent_topology_v1.md  adk_agentic_execution_blueprint_v1.md  adk_architecture.md  adk_orchestration_design_v2.md  adk_runtime_refactor_notes_v1.md  adk_state_and_artifacts_v1.md  adk_system_architecture_v1.md  agent_orchestration_flow.md  backtest_assumptions_v1.md  clarification_rules_v1.md  code_review_risks.md  data_access_architecture_v1.md  data_inventory.md  data_research_agent_design_v1.md  data_research_agent_design_v2.md  design_roadmap.md  environment_setup.md  implementation_roadmap_v1.md  metrics_and_explanations_v1.md  mvp_scope_checklist_v1.md  product_blueprint.md  repository_scaffold_v1.md  result_review_experience_v1.md  strategy_schema_v1.md  tool_contracts_v1.md  tushare_skill_reference_v1.md  user_flow_v1.md
skills/quant_backtest_cn/: README.md  SKILL.md
skills/quant_backtest_cn/references/: data_contract.md  default_assumptions.md  risk_disclosure.md  strategy_schema_v1.md  supported_strategies.md
skills/quant_backtest_cn/scripts/: run_backtest.py  smoke_macd_510300.py  smoke_rotation_top20.py  validate_schema.py
src/strategy_agent/: api.py  app.py  config.py  constants.py
src/strategy_agent/agents/: __init__.py  clarification.py  data_research.py  execution.py  intent_classifier.py  llm_model.py  (+5 more)
tests/: test_data_availability.py  test_execution_flow.py  test_execution_gate.py  test_observability.py  test_progress_narrator.py
(+64 files in other folders)
