[project]
name = "strategy-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "weichaoyang", email = "chaoyang.wei@brgroup.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.31.1",
    "litellm>=1.83.12",
    "pandas>=3.0.2",
]

[project.scripts]
strategy-agent = "strategy_agent:main"
strategy-agent-api = "strategy_agent.api:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
