[project]
name = "strategy-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "weichaoyang", email = "chaoyang.wei@brgroup.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-adk==2.0.0",
    "google-cloud-storage>=3.0.0",
    "litellm>=1.83.12",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "tushare>=1.4.29",
]

[project.scripts]
strategy-agent = "strategy_agent:main"
strategy-agent-api = "strategy_agent.api:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
